--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   smooth_page_indicator: ^0.2.3
   google_maps_flutter: ^2.0.1
   custom_radio_grouped_button: ^1.0.6+1
+  sizer: ^2.0.13
 dev_dependencies:
   flutter_test:
     sdk: flutter
