--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,37 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  connectivity:
   animated_splash_screen: ^1.1.0
   page_transition: ^2.0.0
   fluttertoast:
   otp_text_field: ^1.1.1
   smooth_page_indicator: ^0.2.3
   google_maps_flutter: ^2.0.1
+  flutter_facebook_login:
+  flutter_facebook_auth:
   custom_radio_grouped_button: ^1.0.6+1
   sizer: ^2.0.13
+  http:
+  firebase_auth: ^0.15.5+3
+  firebase_messaging:
+  google_sign_in: ^4.4.1
+  shared_preferences:
+  permission_handler: ^4.3.0
+  image_picker:
+  camera:
+  flutter_spinkit: ^5.0.0
+  video_player:
+  chewie:
+  flutter_slidable:
+  flutter_polyline_points:
+  google_maps_webservice:
+  location:
+  geolocator:
+  latlong:
+  progress_dialog:
+  html2md: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
