--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -23,13 +23,15 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
+				<string>com.googleusercontent.apps.692623989347-um9vqv54ko3k271rp80ga3m3m7vsmts2</string>
 				<string>fb328352308889536</string>
 			</array>
 		</dict>
 	</array>
-
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>FacebookAppID</key>
@@ -45,7 +47,7 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-    <key>NSCameraUsageDescription</key>
+	<key>NSCameraUsageDescription</key>
 	<string>Can I use camera please?</string>
 	<key>NSFaceIDUsageDescription</key>
 	<string>Why is my app authenticating using face id?</string>
@@ -54,15 +56,13 @@
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Always Permission</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>When In Use Permission</string>
+	<string>This app needs access to location when open.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Can I use the mic please?</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Can I use the PhotoLibrary please?</string>
 	<key>NSUserActivityTypes</key>
 	<string>This app needs access to location when in the background.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs access to location when open.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
