--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^0.15.5+3
   firebase_messaging:
   google_sign_in: ^4.4.1
+  sign_in_with_apple:
   shared_preferences:
   permission_handler: ^4.3.0
   image_picker:
